--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 			<br>
 
-			<h3 class="I_m"><b style="color: var(--light-red);">I</b>'m a <b id="im">Élève ingénieur du numérique</b><h3>
+			<h3 class="I_m"><b style="color: var(--light-red);">Je</b>suis <b id="im">Élève ingénieur du numérique</b><h3>
 
 			<br>
 
